# xxhash_cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  makefile  xxhash.sln
.circleci/: config.yml
include/: xxhash.hpp
test/: CMakeLists.txt  catch.hpp  test_main.cpp  xxh3.h  xxhash.h
xxhash/: .travis.yml  compatibility_test.cpp  makefile  test_main.cpp  test_simple.cpp  xxh3.h  xxhash.cpp  xxhash.h  xxhash.hpp  xxhash.vcxproj  xxhash.vcxproj.filters  xxhash_c_version.h
